<resources>
    <string name="app_name">Camine Pal Gym</string>
    <string name="Tienda">Tienda</string>
    <string name="Entrenamiento">Entrenamiento</string>
    <string name="Foro">Foro</string>
    <string name="Perfil">Perfil</string>
    <string name="Home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_publicacion">Agregar Publicacion</string>
    <string name="foro">Foro</string>
    <string name="t_cnica">Técnica</string>
    <string name="transformaciones">Transformaciones</string>
    <string name="tendencias">Tendencias</string>
    <string name="contenido_del_post">Contenido del post</string>
    <string name="brayan_juanito">brayan_juanito</string>
    <string name="nueva_publicaci_n">Nueva publicación</string>
    <string name="foto">Foto</string>
    <string name="jd">JD</string>
    <string name="a_adir_un_t_tulo_opcional">Añadir un título (Opcional)</string>
    <string name="qu_est_s_pensando_comparte_tus_experiencias">¿Qué estás pensando? Comparte tus experiencias...</string>
    <string name="ingresa_tu_correo_electr_nico">Ingresa tu correo electrónico</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="verificar_contrase_a">Verificar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="camine_pal_gym">Camine Pal Gym</string>
    <string name="logo">Logo</string>
    <string name="Logo">Logo</string>
    <string name="correo_o_usuario">Correo o usuario</string>
    <string name="caminepalgymM">CAMINE PAL GYM</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="o_continua_con">o continua con</string>
    <string name="sesionbiometrico">Inicio de sesión biométrico</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="verificar_contrasena">Verificar Contraseña</string>
    <string name="tyc">Acepto Terminos y Condiciones</string>
    <string name="btnregistrarse">Registrarse</string>
    <string name="versi_n_1_0">Versión 1.0</string>
    <string name="_2025_cpg_inc_all_rights_reserved">© 2025 CPG Inc. All rights reserved.</string>
    <string name="camine_pal_gym_2">CAMINE PAL GYM</string>
    <string name="nase_al_foro_de_la_comunidad">Únase al foro de la comunidad</string>
    <string name="contactar_con_soporte_t_cnico">Contactar con soporte técnico</string>
    <string name="ponerse_en_contacto">Ponerse en contacto</string>
    <string name="est_n_seguros_mis_datos">¿Están seguros mis datos?</string>
    <string name="c_mo_restablezco_mi_contrase_a">¿Cómo restablezco mi contraseña?</string>
    <string name="c_mo_cancelo_mi_suscripci_n">¿Cómo cancelo mi suscripción?</string>
    <string name="puedo_sincronizar_con_otras_aplicaciones">¿Puedo sincronizar con otras aplicaciones?</string>
    <string name="accede_al_panel_de_control_para_ver_tu_estado_f_sico_completo_incluyendo_masa_muscular_definici_n_simetr_a_y_actividad_semanal_tambi_n_puedes_a_adir_mediciones_desde_la_pantalla_de_inicio_con_el_bot_n">Accede al Panel de Control para ver tu estado físico completo, incluyendo masa muscular, definición, simetría y actividad semanal. También puedes añadir mediciones desde la pantalla de inicio con el botón +.</string>
    <string name="c_mo_puedo_seguir_mi_progreso">¿Cómo puedo seguir mi progreso?</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="ayuda_y_soporte">Ayuda y Soporte</string>
    <string name="buenos_d_as">Buenos días,</string>
    <string name="martes_febrero_04">Martes, Febrero 04</string>
    <string name="plan_de_hoy">Plan de hoy</string>
    <string name="activo">ACTIVO</string>
    <string name="pecho_y_tr_cep">Pecho y Trícep</string>
    <string name="_55_min">~55 min   | </string>
    <string name="estado_fisico">Estado Fisico</string>
    <string name="us">US</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="buenos_dias_usuario">Buenos dias, Usuario</string>
    <string name="martes_febrero_66">Martes, Febrero 66</string>
    <string name="icono_entrenamiento">Icono entrenamiento</string>
    <string name="pecho_y_tricep">Pecho y Tricep</string>
    <string name="_6_ejercicios">6 ejercicios</string>
    <string name="tendencia">Tendencia</string>
    <string name="metricas_clave">Metricas Clave</string>
    <string name="guardar_medidas">Guardar Medidas</string>
    <string name="empuje">Empuje</string>
    <string name="_4_series_10_repeticiones_80kg">4 series × 10 repeticiones × 80kg</string>
    <string name="press_de_banca">Press de banca</string>
    <string name="jr">JR</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="atr_s">Atrás</string>
    <string name="calor_as">Calorías</string>
    <string name="_450_kcal">450 kcal</string>
    <string name="completado">Completado</string>
    <string name="pendiente">Pendiente</string>
    <string name="_3_sets_12_reps_20kg">3 sets × 12 reps × 20kg</string>
    <string name="_4_sets_12_reps_25kg">4 sets × 12 reps × 25kg</string>
    <string name="editar_medida">Editar Medida</string>
    <string name="ingresa_tus_medidas_corporales_correspondientes">Ingresa tus medidas corporales correspondientes</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="nivel_de_condici_n_f_sica">Nivel de condición física</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="edad">Edad</string>
    <string name="porcentaje_de_grasa">Porcentaje de grasa %</string>
    <string name="sexo_biologico">Sexo biologico</string>
    <string name="tipo_de_cuerpo">Tipo de cuerpo</string>
    <string name="si_no_conoces_tu_porcentaje_de_grasa">Si no conoces tu porcentaje de grasa</string>
    <string name="ingresa_aca">Ingresa aca</string>
    <string name="si_no_conoces_tu_tipo_de_cuerpo">Si no conoces tu tipo de cuerpo</string>
    <string name="tricep_pushdown">Tricep Pushdown</string>
    <string name="triceps">Triceps</string>
    <string name="overhead_extension">Overhead Extension</string>
    <string name="_3_sets_10_reps_32kg">3 sets × 10 reps × 32kg</string>
    <string name="tienda">Tienda</string>
    <string name="consultar_tiendas_cerca_a_ti">Consultar tiendas cerca a ti</string>
    <string name="buscar_productos">Buscar productos...</string>
    <string name="todos">Todos</string>
    <string name="suplementos">Suplementos</string>
    <string name="equipo">Equipo</string>
    <string name="ropa">Ropa</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="jal_n">Jalón</string>
    <string name="pierna">Pierna</string>
    <string name="abdomen">Abdomen</string>
    <string name="agregar_entrenamiento">Agregar Entrenamiento</string>
    <string name="tema">Tema</string>
    <string name="color_de_acento">Color de acento</string>
    <string name="dorado">Dorado</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="morado">Morado</string>
    <string name="naranja">Naranja</string>
    <string name="rojo">Rojo</string>
    <string name="tama_o_de_la_fuente">Tamaño de la fuente</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="largo">largo</string>
    <string name="tama_o_default_de_la_fuente">Tamaño default de la fuente</string>
    <string name="suscripci_n">Suscripción</string>
    <string name="pro_plan">PRO Plan</string>
    <string name="_15_000">$15.000</string>
    <string name="mes">/Mes</string>
    <string name="renueva_en_marzo_22_2026">Renueva en Marzo 22, 2026</string>
    <string name="caracter_sticas_incluidas">Características incluidas</string>
    <string name="seguimiento_detallado_del_entrenamiento">Seguimiento detallado del entrenamiento</string>
    <string name="perspectivas_de_coaching_impulsadas_por_ia">Perspectivas de coaching impulsadas por IA</string>
    <string name="an_lisis_corporal_avanzado">Análisis corporal avanzado</string>
    <string name="atenci_n_al_cliente_prioritaria">Atención al cliente prioritaria</string>
    <string name="experiencia_sin_publicidad">Experiencia sin publicidad</string>
    <string name="programas_de_entrenamiento_exclusivos">Programas de entrenamiento exclusivos</string>
    <string name="cambia_a_anual">Cambia a anual</string>
    <string name="ahorra_40">AHORRA 40%</string>
    <string name="_108_000">$108.000</string>
    <string name="a_o">/Año</string>
    <string name="solamente_0_00_anual_ahorra_47_99_al_a_o">Solamente $0.00/Anual — Ahorra $47.99 al año</string>
    <string name="suscr_bete_y_ahorra_40">⚡ Suscríbete y ahorra 40%</string>
    <string name="historial_de_compras">Historial de compras</string>
    <string name="pro_mensual">PRO Mensual</string>
    <string name="ene_22_2025">Ene 22, 2025</string>
    <string name="pagado">Pagado</string>
    <string name="dic_22_2023">Dic 22, 2023</string>
    <string name="nov_22_2025">Nov 22, 2025</string>
    <string name="cancelar_suscripci_n">Cancelar Suscripción</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="recuperaci_n_de_contrase_a">Recuperación de contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="se_usa_para_sugerencias_de_gimnasios_cercanos">Se usa para sugerencias de gimnasios cercanos</string>
    <string name="dia_de_empuje">Dia de empuje</string>
    <string name="enfocado_en_pecho_y_tricep">Enfocado en Pecho y Tricep</string>
    <string name="progreso">Progreso</string>
    <string name="_3_6_ejercicios">3/6 ejercicios</string>
    <string name="duraci_n">Duración</string>
    <string name="_65_min">65 min</string>
    <string name="press_plano">Press plano</string>
    <string name="chest">Chest</string>
    <string name="_4_sets_12_reps_80kg">4 sets × 12 reps × 80kg</string>
    <string name="press_inclinado_con_nmancuernas">Press inclinado con\nmancuernas</string>
    <string name="cable_flyes">Cable Flyes</string>
    <string name="buscar">Buscar</string>
    <string name="_3_sets_15_reps_15kg">3 sets × 15 reps × 15kg</string>
    <string name="mi_carrito">Mi carrito</string>
    <string name="codigo_de_descuento">Codigo de descuento</string>
    <string name="notificaciones_por_correo_electr_nico">Notificaciones por correo electrónico</string>
    <string name="actualizaciones_enviadas_a_alex_email_com">Actualizaciones enviadas a alex@email.com</string>
    <string name="recibe_alertas_en_tu_dispositivo">Recibe alertas en tu dispositivo</string>
    <string name="notificaciones_push">Notificaciones push</string>
    <string name="canales">Canales</string>
    <string name="me_gusta_comentarios_y_menciones">Me gusta, comentarios y menciones</string>
    <string name="actividad_comunitaria">Actividad comunitaria</string>
    <string name="comunidad">Comunidad</string>
    <string name="recibir_notificaciones_cuando_obtengas_hitos">Recibir notificaciones cuando obtengas hitos</string>
    <string name="alertas_de_logros">Alertas de logros</string>
    <string name="resumen_de_tu_semana_cada_domingo">Resumen de tu semana cada domingo</string>
    <string name="informe_de_progreso_semanal">Informe de progreso semanal</string>
    <string name="recordatorios_diarios_para_completar_tu_entrenamiento">Recordatorios diarios para completar tu entrenamiento</string>
    <string name="recordatorios_de_entrenamiento">Recordatorios de entrenamiento</string>
    <string name="training">Training</string>
</resources>