<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/Home"
        android:icon="@drawable/ic_nav_home" />

    <item
        android:id="@+id/nav_bottom_entrenamiento"
        android:title="@string/Entrenamiento"
        android:icon="@drawable/ic_nav_entrenamiento" />

    <item
        android:id="@+id/nav_bottom_tienda"
        android:title="@string/Tienda"
        android:icon="@drawable/ic_nav_tienda" />

    <item
        android:id="@+id/nav_bottom_foro"
        android:title="@string/Foro"
        android:icon="@drawable/ic_nav_foro" />

    <item
        android:id="@+id/nav_bottom_perfil"
        android:title="@string/Perfil"
        android:icon="@drawable/ic_nav_perfil" />

</menu>